# rover_navigation

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  LICENSE  Makefile  README.md  cmake_install.cmake  package.xml
catkin_generated/: generate_cached_setup.py  ordered_paths.cmake  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
catkin_generated/installspace/: path_planning.pc  path_planningConfig.cmake
catkin_generated/stamps/path_planning/: _setup_util.py.stamp  package.xml.stamp
config/: chain_filters.yaml  filters.yaml  filters_demo.yaml  rover.yaml
convert/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  xyz2pcd  xyz2pcd.cpp
data/: datasets.md  load_data.bash
devel/: .catkin  .rosinstall  setup.sh
devel/lib/pkgconfig/: path_planning.pc
gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
gtest/gtest/: CTestTestfile.cmake  Makefile
include/path_planning/: GridMap.hpp  RoverNav.hpp  RoverNav.hpp.gch
include/rover_navigation/: Cost.hpp  GridMap.hpp  PathPlanner.hpp
launch/: pcl_to_grid_map.launch  traversability_filter.launch
nodes/: convert_pcl_node.cpp  trrt_planner.cpp
papers/: papers.md
rviz/: rover.rviz  rover_filters.rviz  rover_nav.rviz
src/: CMakeLists.txt  GridMap.cpp  GridMap.h  PathPlanner.cpp  RTTExample.cpp  RoverNav.cpp  convert_pcl_node.cpp  narf_keypoint_extraction.cpp  terrain_map.cpp  view_point_cloud.cpp
test/: pcd_read.cpp  pcl2grid.cpp
view/: pcd_read.cpp  view_point_cloud.cpp
visualizer/: pcl_visualizer_demo.cpp
(+1 files in other folders)
