<?xml version="1.0"?>
<package format="2">
  <name>rover_navigation</name>
  <version>0.0.0</version>
  <description>The path_planning package</description>

  <maintainer email="davidjorna@gmail.com">David Jorna</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>std_msgs</depend>
  <depend>roscpp</depend>
  <depend>pcl_ros</depend>
  <depend>grid_map_core</depend>
  <depend>grid_map_ros</depend>
  <depend>grid_map_msgs</depend>
</package>
